--- a/index.css
+++ b/index.css
@@ -26,15 +26,19 @@ body {
     background-color: #bc5090;
 }
 
-.image-container {
-    position: relative;
-    aspect-ratio: 1/1;
-    --length: min(96vw, 400px);
-    width: var(--length);
-    height: var(--length);
+.image-container-container {
     margin-bottom: 1rem;
     border: 8px solid #ff6361;
     border-radius: 8px;
+}
+
+.image-container {
+    position: relative;
+    aspect-ratio: 1/1;
+    --length: min(88vw, 400px);
+    width: var(--length);
+    height: var(--length);
+    
 }
 
 .background,.ears, .eyes, .hair, .leg, .mouth, .neck, .nose, .accessory {
@@ -83,6 +87,30 @@ body {
     display: none !important;
 }
 
+.container {
+width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
 @media (min-width: 768px) {
+  .container {
+    max-width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 970px;
+  }
 
+  .contents {
+    display: flex;
+    gap: 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1170px;
+  }
 }
